--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,40 +11,40 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/iv_previous"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_alignParentStart="true"
-            android:background="?android:attr/selectableItemBackground"
+            android:id="@+id/iv_previous_day"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/baseline_keyboard_double_arrow_left_24"
             android:clickable="true"
             android:focusable="true"
-            android:layout_alignBottom="@+id/date_selector_recycler_view"
-            android:layout_alignTop="@+id/date_selector_recycler_view"
-            android:src="@drawable/baseline_keyboard_double_arrow_left_24"
+            android:layout_centerVertical="true"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             tools:ignore="ContentDescription" />
 
 
-        <com.geekydroid.androidbook.DateSelectorRecyclerView
-            android:id="@+id/date_selector_recycler_view"
-            android:layout_width="match_parent"
+
+        <com.geekydroid.androidbook.HorizontalDatePicker
+            android:id="@+id/horizontal_date_picker"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toStartOf="@+id/iv_next"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/iv_previous" />
+            android:layout_toStartOf="@+id/iv_next_day"
+            android:layout_toEndOf="@+id/iv_previous_day"
+            android:layout_alignParentTop="true"/>
 
         <ImageView
-            android:id="@+id/iv_next"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_alignParentEnd="true"
-            android:background="?android:attr/selectableItemBackground"
+            android:id="@+id/iv_next_day"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/baseline_keyboard_double_arrow_right_24"
             android:clickable="true"
             android:focusable="true"
-            android:layout_alignBottom="@+id/date_selector_recycler_view"
-            android:layout_alignTop="@+id/date_selector_recycler_view"
-            android:src="@drawable/baseline_keyboard_double_arrow_right_24"
+            android:layout_centerVertical="true"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
             tools:ignore="ContentDescription" />
-
 
     </RelativeLayout>
 </layout>
