--- a/app/src/main/res/layout/date_item_layout.xml
+++ b/app/src/main/res/layout/date_item_layout.xml
@@ -1,25 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-        <variable
-            name="data"
-            type="String" />
-    </data>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
+                android:padding="8dp">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp">
+                <TextView
+                    android:id="@+id/tv_day"
+                    style="@style/TextAppearance.AppCompat.Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    tools:text="Thu" />
 
-        <TextView
-            android:id="@+id/tv_item_text"
-            android:text="@{data}"
-            android:layout_width="wrap_content"
-            style="@style/TextAppearance.AppCompat.Title"
-            android:layout_margin="8dp"
-            android:textAlignment="center"
-            android:layout_height="wrap_content"/>
 
-    </RelativeLayout>
+                <TextView
+                    android:id="@+id/tv_month"
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    tools:text="Thu" />
+
+
+                <TextView
+                    android:id="@+id/tv_date"
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    tools:text="27" />
+
+                <TextView
+                    android:id="@+id/tv_year"
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    tools:text="27" />
+
+            </LinearLayout>
+
 </layout>
