--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
 
 
 
-    <com.geekydroid.androidbook.customviews.CircularActivityIndicator
+    <com.geekydroid.androidbook.customviews.PointsDrawer
         android:id="@+id/custom_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
