--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,41 +10,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/iv_previous_day"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/baseline_keyboard_double_arrow_left_24"
-            android:clickable="true"
-            android:focusable="true"
-            android:layout_centerVertical="true"
-            android:background="?android:attr/selectableItemBackgroundBorderless"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            tools:ignore="ContentDescription" />
-
-
-
-        <com.geekydroid.androidbook.HorizontalDatePicker
-            android:id="@+id/horizontal_date_picker"
+        <Button
+            android:id="@+id/btn_post_notification"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toStartOf="@+id/iv_next_day"
-            android:layout_toEndOf="@+id/iv_previous_day"
-            android:layout_alignParentTop="true"/>
+            android:layout_centerInParent="true"
+            android:text="Post Notification"/>
 
-        <ImageView
-            android:id="@+id/iv_next_day"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/baseline_keyboard_double_arrow_right_24"
-            android:clickable="true"
-            android:focusable="true"
-            android:layout_centerVertical="true"
-            android:background="?android:attr/selectableItemBackgroundBorderless"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            tools:ignore="ContentDescription" />
+        <Button
+            android:id="@+id/btn_start_service"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn_post_notification"
+            android:layout_centerHorizontal="true"
+            android:text="Start Service"/>
 
     </RelativeLayout>
 </layout>
